reference/egress-live.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/8
    - ipBlock:
        cidr: 172.16.0.0/12
    - ipBlock:
        cidr: 192.168.0.0/16
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: ledger-web
  policyTypes:
  - Ingress
  - Egress
metadata:
  name: ledger-private-web
  namespace: architects-ledger
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 169.254.0.0/16
        - 127.0.0.0/8
  podSelector:
    matchLabels:
      app: ledger-worker
  policyTypes:
  - Ingress
  - Egress
metadata:
  name: ledger-worker-outbound
  namespace: architects-ledger
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
spec:
  endpointSelector:
    matchLabels:
      app: ledger-web
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
metadata:
  name: ledger-from-gateway
  namespace: architects-ledger
